# horoscope

./: .coverage  .coveragerc  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pr_body_14.md  .pre-commit-config.yaml  .trivyignore  BACKEND_CHANGESET.md  Makefile  ORG_CHANGE_PLAN.md  PHASE3_CHAT_AGENT_PLAN.mdc  PR_BODY.md  PR_BODY_PH4.1-11.md  PR_BODY_PH4.1-13.md  PR_COMMENT_PH4.1-13.md  README.md  RELEASE_NOTES_v4.1.0.md  agent_taskpack_phase4.mds  alembic.ini  hadolint.yaml  package.json  phase4_squelettes.mds  phase4_taskpack_issues_9_18.mds  pyproject.toml  pytest.ini  requirements.ci.txt  requirements.txt  ruff.toml  slo.yaml
.cursor/rules/: quality-gates.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: alembic_migrate.yml  ci.yml  cutover_hourly.yml  deploy_canary.yml  embeddings.yml  pr_image_build.yml  release.yml  retrieval_bench.yml  slo_gate.yml  slo_report.yml  smoke.yml  test-versioning.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 20251019_0001_create_content_versions.py
artifacts/: bench_multitenant.json
backend/: README.md
backend/api/: __init__.py  deps.py  routes_auth.py  routes_charts.py  routes_chat.py  routes_health.py  routes_horoscope.py  routes_retrieval.py  schemas.py
backend/apigw/: __init__.py  auth_utils.py  errors.py  http_metrics.py  internal_auth.py  legacy_routes.py  middleware.py  rate_limit.py  redis_store.py  timeouts.py  versioning.py
backend/app/: __init__.py  celery_app.py  celeryconfig.py  main.py  (+5 more)
dashboards/: legacy_traffic_decay.json  slo.json
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: ENV-SETTINGS.md  ISSUE_9BIS.md  PHASE2_IMPLEMENTATION_PLAN.mdc  PROJECT.md  RAPPORT_IMPLEMENTATION_PHASE4.md  README.md  backend_v2.0_review.md  backend_v2.1_review_final.md  backend_v3.0_review_final.md  cutover_usage.md  phase4_1_agent_instructions.mds  phase4_1_agent_operations.mds  phase4_1_description.md  phase4_1_issues.csv  phase4_review.md  phase4_top_risks.csv  phase4_v4_mvp_plus_assessment.md  retrieval_migration.md
runbooks/: rollback_retrieval.md
scripts/: __init__.py  bench_multitenant.py  check_cutover_criteria.py  check_no_typing_aliases.sh  cutover_metrics.py  deploy_canary.sh  generate_evidence_pack.py  make_truthset_sample.py  phase4_prs_dryrun.ps1  promote_or_abort.sh  purge_tenant.py  replay_outbox.py  retrieval_cutover.sh  rollback_retrieval.py  slo_burn_monitor.py  slo_report.py  validate_slo.py
tests/: conftest.py  fakes.py  test_api_versioning.py  test_auth_and_entitlements.py  test_auth_errors.py  test_bench_multitenant.py  test_bench_script.py  test_budgets_json_validation.py  test_cardinality_guards.py  test_celery_monitoring.py  test_celery_monitoring_bind.py  test_celery_ops.py  test_chat.py  test_chat_orchestrator.py  test_container_paths.py  test_content_repo_extra.py  test_content_version_repo.py  test_cost_controls.py  test_cutover_metrics.py  test_dual_write.py  test_flags.py  test_health.py  test_horoscope_errors.py  test_horoscope_errors_extra.py  test_horoscope_errors_more.py  test_idempotency.py  test_internal_astro.py  test_llm_guard.py  test_llm_guard_enforce.py  test_llm_guard_extra.py  test_metrics.py  test_metrics_business.py  test_pdf_cache.py  test_purge_audit.py  test_rate_limit.py  test_retrieval.py  test_retrieval_metrics_edges.py  test_retrieval_proxy.py  test_retrieval_proxy_unit.py  test_retrieval_routes_more.py  (+20 more)
(+137 files in other folders)
