# Objectif du fichier: Décrire l'objectif de pyproject.toml
# TODO: compléter cette description.

[project]
name = "horoscope-backend"
version = "0.1.0"
description = "Backend FastAPI (MVP) - Horoscope"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.2.1",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "redis>=5.0.8",
    "reportlab>=4.2.5",
]

[tool.ruff]
line-length = 100
target-version = "py313"
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D", "PL"]
# Eviter de casser le flux immédiatement: pas d'obligation de docstring partout,
# et ignorer quelques règles de style trop strictes pour l'instant.
extend-ignore = []

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"**/__init__.py" = ["D"]
"backend/api/routes_chat.py" = ["B008"]
# Objectif du fichier: configuration de projet et outils (pytest, ruff, etc.).

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[project.optional-dependencies]
tokens = [
    "tiktoken==0.12.0",
]
